--- a/html_bucket_class_recaps/4-21-class-recap.html
+++ b/html_bucket_class_recaps/4-21-class-recap.html
@@ -120,7 +120,7 @@
 						
 						<div class="body">
                             <p>
-							Friday we started with another group speech. This time about providing water to impoverished nations by way of the Lifestraw! Hanna, Zach, Jack, Joselyn, and Brooke 
+							Friday we started with another group speech. This time about providing water to impoverished nations by way of the <a href="http://lifestraw.com/">Lifestraw!</a> Hanna, Zach, Jack, Joselyn, and Brooke 
 							gave a wonderful presentation asking for funding to provide people in 3rd world countries with water. Everyone voted and agreed that they would fund their cause.
 							
 							<br><br>After that Nick took some time to remind people that you should e-mail your final essay to Nick, and also e-mail your campus engagement-reflection paper to 
