--- a/events-page.html
+++ b/events-page.html
@@ -101,7 +101,7 @@
                                     </div>
                                     <div class="date">
                                         <i class="fa fa-calendar"></i>
-                                        <span class="data">Last Updated: 17 April 2017</span>
+                                        <span class="data">Last Updated: 23 April 2017</span>
                                     </div>                        
                                 </div>
                             </div>
@@ -116,46 +116,26 @@
 							 </p>
 							 <ul class="tales-list">
 								<li>ALL WEEK: "Dr. Seuss Wants You" and "Facing Prejudice", Grout Museum of History &amp; Science, 503 South St., Waterloo, IA 50701, Tuesday, April 4, 2017 (All day) to Saturday, June 3, 2017 (All day)</li>
-								<li>4/17: Teach UNI Project: "Strengthening Resiliency in the First-Year-Only Classroom", Room 378, Rod Library, Monday, April 17, 2017 - 3:00 pm</li>
-								<li><a href="https://www.facebook.com/events/1755109084819109/">4/17: Immigration Forum: A Conversation about Immigration in Iowa, Room 002, Sabin Hall, Monday, April 17, 2017 - 3:00 pm to 5:00 pm</a></li>
-								<li><a href="https://music.uni.edu/events">4/17: Jazz Band III, Bengtson Auditorium, Russell Hall, Monday, April 17, 2017 - 7:30 pm</a></li>
-								<li><a href="https://www.library.uni.edu/rodcast/201704/trevor-dawes-visit-rod-library-april-18th">4/18: Trevor Dawes presentation, Room 301, Rod Library, Tuesday, April 18, 2017 - 11:00 am</a></li>
-								<li>4/18: Green Zone Training, State College Room, Maucker Union, Tuesday, April 18, 2017 - 1:00 pm to 2:30 pm</li>
-								<li>4/18: Daoism in Chinese Painting, Room 109, Curris Business Building, Tuesday, April 18, 2017 - 4:00 pm</li>
-								<li>4/18: Alpha Sigma Tau "Tater Taus" fundraiser, Wesley Foundation, Tuesday, April 18, 2017 - 5:00 pm <b> - Go hang out with sophie and addy!</b></li>
-								<li><a href="https://music.uni.edu/events">4/18: Percussion Studio Concert, Davis Hall, GBPAC, Tuesday, April 18, 2017 - 8:00 pm</a></li>
-								<li>4/19: LGBT(ea) Time, LGBT* Center, Maucker Union, Wednesday, April 19, 2017 - 12:00 pm</li>
-								<li><a href="https://finaid.uni.edu/financial-literacy-month-2017">4/19: Salary, Compensation, and Benefits: What to Know About Your First Job, Presidential Room, Maucker Union, Wednesday, April 19, 2017 - 12:00 pm to 1:00 pm</a></li>
-								<li><a href="https://csbs.uni.edu/military-science">4/19: UNI-ROTC Awards Ceremony, Great Reading Room, Seerley Hall, Wednesday, April 19, 2017 - 3:00 pm</a></li>
-								<li><a href="https://unialum.org/events/webinar-six-essential-soft-skills-indispensable-professionals">4/19: Webinar: Six Essential Soft Skills of Indispensable Professionals, Web (It's Online), Wednesday, April 19, 2017 - 7:00 pm to 8:00 pm</a></li>
-								<li>4/19: Diversity Colloquium: Serving Our Community, While Learning: Service-Learning and Professional Development at UNI, Scholar Space, Rod Library, Wednesday, April 19, 2017 - 7:00 pm</li>
-								<li>4/19: PAT/History Club Lecture, Room 115, Seerley Hall, Wednesday, April 19, 2017 - 7:00 pm</li>
-								<li><a href="https://music.uni.edu/events">4/19: Student Composers Concert, Davis Hall, GBPAC, Wednesday, April 19, 2017 - 8:00 pm</a></li>
-								<li>4/20: Earth Day Celebration, NW Courtyard, Maucker Union, Thursday, April 20, 2017 - 10:00 am to 2:00 pm</li>
-								<li><a href="https://music.uni.edu/events">4/20: Guest Artist Recital: Karel Keldermans, carillon, Campanile, UNI Campus, Thursday, April 20, 2017 - 12:00 pm</a></li>
-								<li>4/20: Free Sexual Health Screening, Student Health Clinic, Thursday, April 20, 2017 - 1:00 pm to 3:30 pm</li>
-								<li>4/20: The Pedagogical Role of Evidence in Changing Students' Minds, Room 378, Rod Library, Thursday, April 20, 2017 - 3:30 pm</li>
-								<li>4/20: West African Drum Ensemble performance, UNI Museum, first floor Rod Library, Thursday, April 20, 2017 - 5:00 pm</li>
-								<li><a href="https://music.uni.edu/events">4/20: Faculty Lecture-Recital: Melinda Boyd with Jean McDonald, mezzo-soprano, and Robin Guy, piano, Graham Hall, Russell Hall, Thursday, April 20, 2017 - 6:00 pm</a></li>
-								<li>4/20: Psychology Club meeting, Room 320, Curris Business Building, Thursday, April 20, 2017 - 6:00 pm</li>
-								<li>4/20: Take Back the Night, Rooftop Plaza, Maucker Union, Thursday, April 20, 2017 - 7:00 pm</li>
-								<li><a href="https://music.uni.edu/events">4/20: Jazz Panthers, Bengtson Auditorium, Russell Hall, Thursday, April 20, 2017 - 7:30 pm</a></li>
-								<li><a href="https://commstudies.uni.edu/about">4/20: Performance Power Hour, Room 040, Lang Hall, Thursday, April 20, 2017 - 7:30 pm</a></li>
-								<li><a href="https://earth.uni.edu/content/observatory-visit">4/20: Observatory Show, Room 137, McCollum Science Hall, Thursday, April 20, 2017 - 9:00 pm to 10:00 pm</a></li>
-								<li><a href="https://music.uni.edu/windsymphonyalumni">4/21 ALL DAY: Wind Symphony Alumni Reunion, Urbandale, IA and UNI Campus, Cedar Falls, Friday, April 21, 2017 (All day) to Monday, April 24, 2017 (All day)</a></li>
-								<li>4/21: Biometric Screening, Rooms 007/009, Gilchrist Hall, Friday, April 21, 2017 - 7:00 am</li>
-								<li><a href="https://music.uni.edu/events">4/21: Guest Artist Recital: Karel Keldermans, carillon, Campanile, UNI Campus, Friday, April 21, 2017 - 12:00 pm</a></li>
-								<li><a href="http://www.gbpac.com/upcoming-events/e-727/into-the-woods.aspx">4/21: Into The Woods, Gallagher Bluedorn Performing Arts Center, Friday, April 21, 2017 - 7:00 pm</a></li>
-								<li><a href="https://www.facebook.com/events/1170600789717034/">4/21: Film Appreciation Club: 'Mulholland Drive', Room 111, Kamerick Art Building, Friday, April 21, 2017 - 7:00 pm</a></li>
-								<li><a href="https://music.uni.edu/events">4/22 ALL DAY: Community Music School Recital Weekend, Russell Hall, Saturday, April 22, 2017 (All day) to Sunday, April 23, 2017 (All day)</a></li>
-								<li><a href="https://music.uni.edu/events">4/22: Music Education Workshop, Davis Hall, GBPAC, Saturday, April 22, 2017 - 9:00 am</a></li>
-								<li><a href="https://goodneighboriowa.org/">4/22: Good Neighbor Iowa Kickoff Event, Seerley Park, Saturday, April 22, 2017 - 10:00 am to 11:30 am</a></li>
-								<li><a href="http://www.gbpac.com/upcoming-events/e-727/into-the-woods.aspx">4/22: Into The Woods, Gallagher Bluedorn Performing Arts Center, Saturday, April 22, 2017 - 2:00 pm</a></li>
-								<li><a href="https://music.uni.edu/events">4/22: UNI Faculty Piano Quartet, Graham Hall, Russell Hall, Saturday, April 22, 2017 - 6:00 pm</a></li>
-								<li><a href="https://fashionshow25.splashthat.com/">4/22: TAPP Catwalk 25 Around the World in 60 Minutes, Auditorium, Lang Hall, Saturday, April 22, 2017 - 7:00 pm to 9:00 pm</a></li>
-								<li><a href="http://www.gbpac.com/upcoming-events/e-727/into-the-woods.aspx">4/23: Into The Woods, Gallagher Bluedorn Performing Arts Center, Sunday, April 23, 2017 - 2:00 pm</a></li>
-								<li>4/23: Psi Chi Honor Society Induction, Old Central Ballroom C, Maucker Union, Sunday, April 23, 2017 - 3:00 pm to 4:00 pm</li>
-								<li><a href="https://music.uni.edu/events">4/23: UNI Suzuki School Northern Iowa Junior Orchestra Concert, Davis Hall, GBPAC, Sunday, April 23, 2017 - 6:00 pm</a></li>
+								<li><a href="https://music.uni.edu/windsymphonyalumni">4/24 ALL DAY: Wind Symphony Alumni Reunion, Urbandale, IA and UNI Campus, Cedar Falls, Friday, April 21, 2017 (All day) to Monday, April 24, 2017 (All day)</a></li>
+								<li><a href="https://www.library.uni.edu/rodcast/201704/geocache-college-cash-april-24-april-28">4/24: Geocache for College Cash 2017, Learning Commons, Rod Library, Monday, April 24, 2017 - 10:00 am to 12:00 pm</a></li>
+								<li><a href="http://ev12.evenue.net/cgi-bin/ncommerce3/SEGetEventInfo?ticketCode=GS%3AUNI%3AUSM17%3ASMD24A%3A&linkID=twuni&shopperContext=&pc=&caller=&appCode=&groupCode=SS&cgc=">4/24: Spotlight Series: UNI Opera's "Death by Aria!", Davis Hall, GBPAC, Monday, April 24, 2017 - 6:00 pm</a></li>
+								<li><a href="https://www.uni.edu/art/gallery.html">4/24: "B.F.A. Group Exhibition", UNI Gallery of Art, Monday, April 24, 2017 - 7:00 pm to Saturday, May 6, 2017 - 5:00 pm</a></li>
+								<li><a href="https://commstudies.uni.edu/clohesy-documentary-film-series">4/24: Film Screening: 'The Armor of Light', Auditorium, Lang Hall, Monday, April 24, 2017 - 7:30 pm</a></li>
+								<li><a href="http://ev12.evenue.net/cgi-bin/ncommerce3/SEGetEventInfo?ticketCode=GS%3AUNI%3AUSM17%3ASMD24B%3A&linkID=twuni&shopperContext=&pc=&caller=&appCode=&groupCode=SS&cgc=">4/24: Spotlight Series: Northern Iowa Wind Symphony ftg. Varsity Men's Glee Club, Great Hall, GBPAC, Monday, April 24, 2017 - 7:30 pm</a></li>
+								<li><a href="https://music.uni.edu/events">4/25 ALL DAY: Women Sing! Women's Chorus Festival, Great Hall, GBPAC, Tuesday, April 25, 2017 (All day)</a></li>
+								<li><a href="https://commstudies.uni.edu/clohesy-documentary-film-series">4/24: The William and Stephanie Clohesy Documentary Film Series, ScholarSpace 301, Rod LIbrary, Tuesday, April 25, 2017 - 10:00 am</a></li>
+								<li>4/25: Teach UNI Project presentations, Room 378, Rod Library, Tuesday, April 25, 2017 - 3:30 pm</li>
+								<li><a href="https://commstudies.uni.edu/clohesy-documentary-film-series">4/24: The William and Stephanie Clohesy Documentary Film Series, Room 002, Sabin Hall, Tuesday, April 25, 2017 - 7:30 pm</a></li>
+								<li>4/26: Lavender Graduation, Old Central Ballroom C, Maucker Union, Wednesday, April 26, 2017 - 5:00 pm</li>
+								<li><a href="https://music.uni.edu/events">4/26: Clarinet Studio Recital, Graham Hall, Russell Hall, Wednesday, April 26, 2017 - 6:00 pm</a></li>
+								<li><a href="https://unialum.org/events/webinar-how-make-living-and-difference-during-second-half-life">4/26: Webinar: How to Make a Living and a Difference during the Second Half of Life, Web (It's Online), Wednesday, April 26, 2017 - 7:00 pm to 8:00 pm</a></li>
+								<li><a href="http://ev12.evenue.net/cgi-bin/ncommerce3/SEGetEventInfo?ticketCode=GS%3AUNI%3AUSM17%3ASMD26%3A&linkID=twuni&shopperContext=&pc=&caller=&appCode=&groupCode=SS&cgc=">4/26: Spotlight Series: UNI Singers &amp; Symphonic Band, Great Hall, GBPAC, Wednesday, April 26, 2017 - 7:30pm</a></li>
+								<li><a href="https://biology.uni.edu/botanical-center">4/27: Botanical Center Annual Spring Plant Sale, Botanical Center, Thursday, April 27, 2017 - 7:30 am to 3:00 pm</a></li>
+								<li>4/27: Flute Chamber Concert, Learning Commons, Rod Library, Thursday, April 27, 2017 - 4:00 pm</li>
+								<li><a href="https://langlit.uni.edu/news/final-thursday-reading-series-back-2017">4/27: Final Thursday Reading Series featuring Keith Lesmeister, The Hearst Center for the Arts, Thursday, April 27, 2017 - 7:00 pm</a></li>
+								<li><a href="https://earth.uni.edu/content/observatory-visit">4/27: Observatory Show, Room 137, McCollum Science Hall, Thursday, April 27, 2017 - 9:00 pm to 10:00 pm</a></li>
+								<li><a href="https://music.uni.edu/events">4/28: UNI Children's Choir Concert, Bengtson Auditorium, Russell Hall, Friday, April 28, 2017 - 7:30 pm</a></li>
+								<li><a href="https://www.facebook.com/events/1734788030185235/">4/30: UNI Middle Eastern Dance Club Show, Cedar Falls Community Center (next to CF Public Library), Sunday, April 30, 2017 - 6:00 pm</a></li>
                             </ul>
 						</div>
                     </article>
