--- a/recaps-page.html
+++ b/recaps-page.html
@@ -101,7 +101,7 @@
                                     </div>
                                     <div class="date">
                                         <i class="fa fa-calendar"></i>
-                                        <span class="data">Last Updated: 24 April 2017</span>
+                                        <span class="data">Last Updated: 1 May 2017</span>
                                     </div>                        
                                 </div>
                             </div>
@@ -111,6 +111,8 @@
 							 <p>
 								This page contains links to all our class recaps and will be updated every class. Alternatively, you can find the newest ones linked on the home page. 
 								If you ever need to sort specifically by class recaps, you know where to go.
+								
+								<br><br><b>AS OF MAY 1st: This page is no longer being updated. The year is over. Here is an archive of every class we had during my peer mentorship. Feel free to explore!</b>
 							 </p>
 							 <ul class="tales-list">
 								<li><a href="html_bucket_class_recaps/4-24-class-recap.html">4/24/17 Today we learned about using animals to detect earthquakes and discussed our pizza party.</a></li>
